--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
-    "core-js": "^3.15.1",
+    "body-parser": "^1.19.0",
+    "core-js": "^3.16.1",
+    "express": "^4.17.1",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.2.1",
+    "@vue/test-utils": "^1.2.2",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^27.0.5",
-    "jest": "^27.0.5",
-    "vue-jest": "^3.0.4"
+    "babel-jest": "^27.0.6",
+    "jest": "^27.0.6",
+    "vue-jest": "^3.0.7"
   }
 }
